--- a/Portfolio/html/contactMe.html
+++ b/Portfolio/html/contactMe.html
@@ -32,10 +32,12 @@
             <input type="submit" value="register">
             <input type="reset" value="reset">
 
-        <header>
-
-
-        </header>
+        <ul> 
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="/Portfolio/html/experience.html">Experience</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="projects.html">projects</a></li>
+        </ul>
 
 
 
