--- a/Portfolio/html/education.html
+++ b/Portfolio/html/education.html
@@ -30,7 +30,7 @@
 
     <ul> 
             <li><a href="../index.html">Home</a></li>
-            <li><a href="education.html">Education</a></li>
+            <li><a href="contactMe.html">Contact Me</a></li>
             <li><a href="experience.html">Experience</a></li>
             <li><a href="projects.html">projects</a></li>
         </ul>
