--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Portfolio</title>
+        <!-- stylesheet for css file -->
     </head>
     <body>
         <h2>Sheikh, Md. Sadik </h2>
