minor changes for mid

--- a/Portfolio/html/contactMe.html
+++ b/Portfolio/html/contactMe.html
@@ -71,7 +71,7 @@
            </div>
 
            <div class="reg">
-             <input id="sbm" type="submit" value="register">
+             <input id="sbm" type="submit" value="submit">
             <input id= "rst"type="reset" value="reset">
            </div>
 
